# phntm_oak_ros2

./: .gitignore  Dockerfile  package.xml  setup.cfg  setup.py
description/: base_descr.urdf.xacro  depthai_descr.urdf.xacro
description/include/: base_macro.urdf.xacro  depthai_macro.urdf.xacro
launch/: spatial_detection_launch.py
phntm_oak_ros2/: oak_detector_test.py  oak_tracker_test.py  spatial_detection.py
phntm_oak_ros2/inc/: lib.py
