<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phntm_oak_ros2</name>
  <version>0.0.1</version>
  <description>Custom Python ROS2 driver for the OAK-D Lite camera</description>
  <maintainer email="mirek@phntm.io">Mirek Burkon</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ffmpeg_image_transport_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>